--- a/css/app2.css
+++ b/css/app2.css
@@ -682,9 +682,9 @@ footer .footer-brand {
 footer .footer-brand:hover, footer .footer-brand:focus {
   color: #3C4858;
 }
-footer .copyright {
+.footer_2 .copyright {
   display: inline-block;
-  padding-top: 0px;
+  padding-top: 0;
   padding-right: 20px;
   text-align: center;
 }
